--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.hse</groupId>
-    <artifactId>template-filter-ms</artifactId>
+    <artifactId>cmc-filter-ms</artifactId>
     <version>1.0.0</version>
 
     <properties>
