--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Kafka general settings
-spring.kafka.bootstrap-servers=
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP-SERVERS}
 
 # Kafka Consumer settings
-spring.kafka.consumer.group-id=
+spring.kafka.consumer.group-id=${SPRING_KAFKA_CONSUMER_GROUP-ID}
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -13,5 +13,5 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=dev.hse.template.kafka.serialization.FilteredModelSerializer
 
 # Filter settings
-filter.source=
-filter.subtheme=
+filter.source=cmc
+filter.subtheme=cryptocurrency
