--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.kafka.consumer.group-id=${SPRING_KAFKA_CONSUMER_GROUP-ID}
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=dev.hse.template.kafka.serialization.RawModelDeserializer
+spring.kafka.consumer.value-deserializer=dev.hse.cmc.kafka.serialization.RawModelDeserializer
 
 # Kafka Producer settings
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=dev.hse.template.kafka.serialization.FilteredModelSerializer
+spring.kafka.producer.value-serializer=dev.hse.cmc.kafka.serialization.FilteredModelSerializer
 
 # Filter settings
 filter.source=cmc
